# GenSBI-validation

./: .gitignore  README.md  pyproject.toml  testme.py
.github/workflows/: python-app.yml.off  python-publish.yml.off
src/gensbi_validation/: __init__.py  distribution_wrapper.py
