[project]
name = "GenSBI-validation"
version = "0.0.1"
description = "Validation library for GenSBI"
authors = [{ name = "Aurelio Amerio", email = "aure.amerio@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "gensbi @ git+https://github.com/aurelio-amerio/GenSBI.git",
    "sbi>=0.25.0"
]

[project.optional-dependencies]
cuda12 = ["gensbi[cuda12] @ git+https://github.com/aurelio-amerio/GenSBI.git"]

[project.urls]
Homepage = "https://github.com/aurelio-amerio/GenSBI-examples"
Issues = "https://github.com/aurelio-amerio/GenSBI-examples/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
force-include = { "src/gensbi_examples" = "gensbi_examples" }
