[project]
name = "GenSBI-validation"
version = "0.0.1"
description = "Validation library for GenSBI"
authors = [{ name = "Aurelio Amerio", email = "aure.amerio@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # "gensbi @ git+https://github.com/aurelio-amerio/GenSBI.git",
    "torch<2.6",
    "torchvision",
    "sbi>=0.25.0"
]

[project.urls]
Homepage = "https://github.com/aurelio-amerio/GenSBI-validation"
Issues = "https://github.com/aurelio-amerio/GenSBI-validation/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.metadata]
allow-direct-references = true


[tool.pytest.ini_options]
env = [
    "JAX_PLATFORMS=cpu"
]
